# ScreenSaverStopper

./: .gitignore  CMakeLists.txt  main.cpp
