cmake_minimum_required(VERSION 3.15)
project(ScreenSaverStopper)
set(CMAKE_CXX_STANDARD 14)
add_executable(ScreenSaverStopperBackground WIN32 main.cpp)
add_executable(ScreenSaverStopperConsole WIN32 main.cpp)
target_link_options(ScreenSaverStopperBackground PUBLIC "/SUBSYSTEM:WINDOWS" "/ENTRY:mainCRTStartup")
target_link_options(ScreenSaverStopperConsole PUBLIC "/SUBSYSTEM:CONSOLE" "/ENTRY:mainCRTStartup")
